third_party/WebKit/Source/core/dom/StyleEngine.cpp
@@ -735,14 +735,20 @@ void StyleEngine::setStatsEnabled(bool enabled)
 
 void StyleEngine::setShadowCascadeOrder(ShadowCascadeOrder order)
 {
-    if (order <= m_shadowCascadeOrder)
+    ASSERT(order != ShadowCascadeOrder::ShadowCascadeNone);
+
+    if (order == m_shadowCascadeOrder)
         return;
+
+    if (order == ShadowCascadeOrder::ShadowCascadeV0)
+        m_mayContainV0Shadow = true;
 
     // For V0 -> V1 upgrade, we need style recalculation for the whole document.
     if (m_shadowCascadeOrder == ShadowCascadeOrder::ShadowCascadeV0 && order == ShadowCascadeOrder::ShadowCascadeV1)
         document().setNeedsStyleRecalc(SubtreeStyleChange, StyleChangeReasonForTracing::create(StyleChangeReason::Shadow));
 
-    m_shadowCascadeOrder = order;
+    if (order > m_shadowCascadeOrder)
+        m_shadowCascadeOrder = order;
 }
 
 void StyleEngine::setPreferredStylesheetSetNameIfNotSet(const String& name)
